2003-04-01 Tomohiro KUBOTA <kubota@debian.org>

	* tool/mlconfig/mc_char_encoding.c: mlconfig supports "GEORGIAN-PS"
	  and "KOI8-T".
	* tool/mlconfig/main.c: write in the label that "font larger"
	  and "font smaller" doesn't modify (save) configuration files.
	* Updated "po" (gettext) files for the above modification.
	* man/mlterm.1: mentions these two encodings and
	  "-%" and "-$" options.

2003-03-31  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_imagelib_gdk.c: minor code cleanup.

2003-03-30 Araki Ken <arakiken@users.sf.net>

	* Added "georgian-ps" and "koi8-t" encodings.

2003-03-30 Tomohiro KUBOTA <kubota@debian.org>

	* A patch contributed by Mike Fabian to fix unstability in
	  64 bit platforms, by changing "0" into "NULL".
	* $(SYSCONFDIR)/mlterm/menu was not read even when
	  $(HOME)/.mlterm/menu isn't available.  Fixed.

2003-03-29 Araki Ken <arakiken@users.sf.net>

	* Output cvs revision of ChangeLog by mlterm -v.

2003-03-28 Araki Ken <arakiken@users.sf.net>

	* If a shell exited in a screen, the screen could be closed
	  even if other background ptys left. Fixed.

2003-03-26 Araki Ken <arakiken@users.sf.net>

	* Mlterm died as soon as the shell exited while screen region being selected. Fixed.

2003-03-26 Tomohiro KUBOTA <kubota@debian.org>

	* Updated tool/mlconfig/po/de.po
	  (Thanks to Mike Fabian).

2003-03-25 Tomohiro KUBOTA <kubota@debian.org>

	* Fixed a bug that non-listed colors are not available.
	  (This bug was due to 2003-02-21's oversimplification.)

2003-03-24 Araki Ken <arakiken@users.sf.net>

	* Added -%/--class/app_class option.
	  Fixed the behavior of 'title' and 'name' option.
	  (Thanks to >>283)

2003-03-21 Tomohiro KUBOTA <kubota@debian.org>

	* tool/mlconfig/mc_color.[ch] simplification.
	* Color names are now translatable in mlconfig.
	* Japanese translation of above new translatable items.
	* Encoding change in tool/mlconfig/po/ja.po from UTF-8
	  to EUC-JP for easier editing.
